--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -1,10 +1,20 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-  font-style: italic;
+  font-family: sans-serif;
+  height: 100vh;
+
+  display: flex;
+  flex-direction: column;
+}
+
+footer {
+  margin-top: auto;
+  padding: 5rem;
 }
 
 p {
@@ -20,9 +30,6 @@ h2 {
 .newBlog {
   text-align: center;
   margin: 1rem 0;
-}
-
-form {
 }
 
 .form {
@@ -44,4 +51,88 @@ form {
   font-style: bold;
   font-weight: 700;
   text-decoration: solid;
+}
+
+.nav__container {
+  margin-bottom: 3rem;
+  display: flex;
+  padding: 2rem;
+  margin-left: auto;
+  margin-right: auto;
+  justify-content: center;
+  column-gap: 10rem;
+
+  align-items: center;
+}
+
+.logo {
+  margin-left: 5rem;
+  margin-right: auto;
+  font-size: 2em;
+  font-weight: bold;
+  line-height: 1;
+}
+
+.nav ul {
+  display: flex;
+  align-items: center;
+  list-style: none;
+  column-gap: 5rem;
+  margin-right: 5rem;
+}
+
+.nav__items a {
+  padding: 0.5rem;
+  font-size: 1.5rem;
+  color: black;
+  text-decoration: none;
+}
+
+.nav__items a:hover {
+  color: rebeccapurple;
+  outline: 1px solid rebeccapurple;
+}
+
+/* Форма логина для администратора */
+
+/* formAdmin__ */
+
+.formAdmin__container {
+  display: flex;
+  margin-top: auto;
+  margin-bottom: auto;
+  flex-direction: column;
+  align-items: center;
+  gap: 3.5rem;
+}
+
+.formAdmin__login,
+.formAdmin__password {
+  font-size: 1.4rem;
+  font-style: italic;
+  display: flex;
+  flex-direction: column;
+  row-gap: 1rem;
+  input {
+    font-weight: bold;
+    font-size: 1.3rem;
+    padding: 1rem;
+    border: 2px solid black;
+    border-radius: 0.5em;
+    text-decoration: none;
+    background-color: wheat;
+    color: blueviolet;
+  }
+  input::placeholder {
+    font-weight: normal;
+    font-style: italic;
+    font-size: 1.3rem;
+    text-decoration: none;
+    letter-spacing: 0.2rem;
+    color: rgba(138, 43, 226, 0.5);
+  }
+}
+
+.formAdmi__sumbit input {
+  font-size: 2rem;
 }
